# PVM

./: .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  LICENSE  README.md  list.json
.gemini/skills/rust-dev/: SKILL.md
.gemini/skills/sqlite-db/: SKILL.md
.github/workflows/: release.yml
PVM/: Program.cs
PVM/Commands/: AddCommand.cs  ExtCommand.cs  ExtEnableCommand.cs  IniCommand.cs  InstallCommand.cs  ListCommand.cs  UseCommand.cs
PVM/Data/: InstallUrl.cs  PhpList.cs  PhpVersion.cs  SqliteDbContext.cs
PVM/Migrations/: 20240221020131_initial.Designer.cs  20240221020131_initial.cs  20240228230338_php urls.Designer.cs  20240228230338_php urls.cs  20240228230554_php urls column change.Designer.cs  20240228230554_php urls column change.cs  SqliteDbContextModelSnapshot.cs
PVM/helpers/: HttpClientDownloadWithProgress.cs
src/: commands.rs  db.rs  helpers.rs  lib.rs  main.rs
src/commands/: add.rs  ext.rs  ext_enable.rs  ini.rs  install.rs  list.rs  list_remote.rs  self_update.rs  setup.rs  uninstall.rs  use_cmd.rs  version.rs
tests/: tests.rs
